# task-5-onxp

./: .gitignore  README.md  pyproject.toml
src/django_web_server/: settings.py  urls.py  views.py
