[project]
name = "meet_5"
version = "0.1.0"
description = ""
authors = [
    {name = "danggro", email = "anangdwin55@gmail.com"},
]
dependencies = [
    "django>=5.0.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
